--- a/package.json
+++ b/package.json
@@ -21,9 +21,13 @@
     "@angular/core": "^14.2.4",
     "@angular/forms": "^14.2.4",
     "@angular/language-service": "^14.2.4",
+    "@angular/material": "^14.2.3",
     "@angular/platform-browser": "^14.2.4",
     "@angular/platform-browser-dynamic": "^14.2.4",
     "@angular/router": "^14.2.4",
+    "@capacitor/angular": "^2.0.3",
+    "@capacitor/core": "latest",
+    "@capacitor/preferences": "^4.0.2",
     "@coreui/angular": "~4.2.4",
     "@coreui/angular-chartjs": "^4.2.4",
     "@coreui/chartjs": "^3.0.0",
@@ -31,6 +35,7 @@
     "@coreui/icons": "^2.1.0",
     "@coreui/icons-angular": "^4.2.4",
     "@coreui/utils": "^1.3.1",
+    "@ionic/angular": "^6.3.8",
     "chart.js": "^3.9.1",
     "ngx-perfect-scrollbar": "^10.1.1",
     "rxjs": "~7.5.0",
@@ -42,6 +47,7 @@
     "@angular/cli": "^14.2.4",
     "@angular/compiler-cli": "^14.2.4",
     "@angular/localize": "^14.2.4",
+    "@capacitor/cli": "latest",
     "@types/jasmine": "^4.3.0",
     "@types/node": "^16.11.62",
     "jasmine-core": "~4.4.0",
